--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Document</title>
+    <title>RPSLS</title>
 </head>
 <body>
-    
+    <h1>Rock, Paper, Scissors, Lizard, Spock</h1>
+
+    <div id="game-container">
+        <h2>Level: <span>0</span></h2> 
+        <div id="game-elements">
+            
+        </div>
+        <button type="submit">Submit</button>
+
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
