added icons for rock papper scissors

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
+    
     <title>RPSLS</title>
 </head>
 
@@ -17,18 +18,16 @@
         <div id="game-elements">
             <div id=left-buttons>
                 <h3 class="userxcomputer">You</h3>
-                <button class="btn"></button>
-                <button class="btn"></button>
-                <button class="btn"></button>
+                <button class="btn "><i class="fa-solid fa-hand-back-fist"></i></button>
+                <button class="btn"><i class="fa-solid fa-hand"></i></button>
+                <button class="btn"><i class="fa-solid fa-hand-scissors"></i></button>
             </div>
             <div id="center-text">
                 <h3>VS</h3> 
             </div>
             <div id="right-buttons">
                 <h3 class="userxcomputer">Computer</h3>
-                <button class="btn"></button>
-                <button class="btn"></button>
-                <button class="btn"></button>
+                <button class="btn"><i class="fa-solid fa-question"></i></i></button>
             </div>
         </div>
         <div class="submitHolder">
@@ -36,6 +35,8 @@
         </div>
     </section>
     <script src="assets/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/adbe32f668.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
