finished continue feature in javascript where it resets all values for the next match

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Rock, Paper, Scissors, Lizard, Spock</h1>
 
     <section id="game-container">
-        <h2 id="level-title">Level: <span id="level-count">0</span></h2>
+        <h2 id="level-title">Level: <span id="level-count">1</span></h2>
         <div id="game-elements">
             <div id=left-buttons>
                 <h3 class="userxcomputer">You</h3>
@@ -36,7 +36,8 @@
             </div>
         </div>
         <div class="submitHolder">
-            <button type="submit" id="submit-button" data-type="submit">Submit</button>
+            <button type="submit" id="submit-button" data-type="submit" class="bottom-button">Submit</button>
+            <button type="submit" id="continue-button" data-type="continue" class="bottom-button">Continue</button>`
         </div>
     </section>
     <script src="assets/js/script.js"></script>
