fixed bug where game was allowed to be played with no user value

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="submitHolder">
             <button type="submit" id="submit-button" data-type="submit" class="bottom-button">Submit</button>
-            <button type="submit" id="continue-button" data-type="continue" class="bottom-button">Continue</button>`
+            <button type="submit" id="continue-button" data-type="continue" class="bottom-button">Continue</button>
         </div>
     </section>
     <script src="assets/js/script.js"></script>
