--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <button type="submit" id="submit-button" data-type="submit" class="bottom-button">Submit</button>
             <button type="submit" id="continue-button" data-type="continue" class="bottom-button">Continue</button>
         </div>
-    </section>
-    <section>
-        <h3>Score:</h3>#
-        <p>You: <span id="user-score">0</span></p>
-        <p>Computer: <span id="computer-score">0</span></p>
+        <div id="score-section">
+            <h3>Score:</h3>
+            <p>You: <span id="user-score">0</span></p>
+            <p>Computer: <span id="computer-score">0</span></p>
+        </div>
     </section>
     <script src="assets/js/script.js"></script>
     <script src="https://kit.fontawesome.com/adbe32f668.js" crossorigin="anonymous"></script>
