added level buttons within html and fixed the score display being outside the box on different screen sizing

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 </head>
 
 <body>
-    <h1>Rock, Paper, Scissors, Lizard, Spock</h1>
-
+    <section id = "nav-bar">
+        <h1>Rock, Paper, Scissors, Lizard, Spock</h1>
+        <ul>
+            <li class="buttonDesign">Level 1</li>
+            <li class="buttonDesign">Level 2</li>
+            <li class="buttonDesign">Level 3</li>
+        </ul>
+    </section>
     <section id="game-container">
         <h2 id="level-title">Level: <span id="level-count">1</span></h2>
         <div id="game-elements">
