added level pages so therer are three different levels the game can be played at

--- a/level2.html
+++ b/level2.html
@@ -14,19 +14,20 @@
     <section id = "nav-bar">
         <h1>Rock, Paper, Scissors, Lizard, Spock</h1>
         <ul>
-            <a href=#><li class="buttonDesign">Level 1</li></a>
-            <a href="level2.html"><li class="buttonDesign">Level 2</li></a>
+            <a href="index.html"><li class="buttonDesign">Level 1</li></a>
+            <a href=#><li class="buttonDesign">Level 2</li></a>
             <a href="level3.html"><li class="buttonDesign">Level 3</li></a>
         </ul>
     </section>
     <section id="game-container">
-        <h2 id="level-title">Level: 1</h2>
+        <h2 id="level-title">Level: 2</h2>
         <div id="game-elements">
             <div id=left-buttons>
                 <h3 class="userxcomputer">You</h3>
                 <button class="btn" data-type="rock"><i class="fa-solid fa-hand-back-fist"></i></button>
                 <button class="btn" data-type="paper"><i class="fa-solid fa-hand"></i></button>
                 <button class="btn" data-type="scissors"><i class="fa-solid fa-hand-scissors"></i></button>
+                <button class="btn" data-type="lizard"><i class="fa-solid fa-hand-lizard"></i></button>
             </div>
             <div id="center-text">
                 <div id="text-container">
