--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple game of Rock, Paper, Scissors, Lizard, Spock">
+    <meta name="keywords" content="Rock, Paper, Scissors, Lizard, Spock, rock paper scissors lizard spock">
+    <meta name="author" content="Ibrahim for Code Institute Portfolio Project 1">
     <link rel="stylesheet" href="assets/css/styles.css">
     
     <title>RPSLS</title>
