--- a/level2.html
+++ b/level2.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple game of Rock, Paper, Scissors, Lizard, Spock">
+    <meta name="keywords" content="Rock, Paper, Scissors, Lizard, Spock, rock paper scissors lizard spock">
+    <meta name="author" content="Ibrahim for Code Institute Portfolio Project 2">
     <link rel="stylesheet" href="assets/css/styles.css">
     
     <title>RPSLS</title>
@@ -12,15 +15,15 @@
 <div id="win-overlay" class="overlay">
     <h1>Congrats you won!</h1>
     <ul>
-        <a href="index.html"><li class="buttonDesign">Level 1</li></a>
-        <a href="" onClick="refreshPage()"><li class="buttonDesign">Try this level again</li></a>
-        <a href="level3.html"><li class="buttonDesign">Level 3</li></a>
+        <a href="index.html" role="button" aria-label="this button will take you back to level 1"><li class="buttonDesign">Level 1</li></a>
+        <a href="" onClick="refreshPage()" role="button" aria-label="this button will refresh the page so youy can play the game again"><li class="buttonDesign">Try this level again</li></a>
+        <a href="level3.html" role="button" aria-label="this button will take you to level 3"><li class="buttonDesign">Level 3</li></a>
     </ul>
 </div>
 <div id="lose-overlay" class="overlay">
     <h1>Awww.. unlucky computer wins</h1>
     <ul>
-        <a href="" onClick="refreshPage()"><li class="buttonDesign">Try again</li></a>
+        <a href="" onClick="refreshPage()"><li class="buttonDesign" role="button" aria-label="this button will refresh the page so you can try this level again">Try again</li></a>
     </ul>
 </div>
 <body>
@@ -35,10 +38,10 @@
         <div id="game-elements">
             <div id=left-buttons>
                 <h3 class="userxcomputer">You</h3>
-                <button class="btn" data-type="rock"><i class="fa-solid fa-hand-back-fist"></i></button>
-                <button class="btn" data-type="paper"><i class="fa-solid fa-hand"></i></button>
-                <button class="btn" data-type="scissors"><i class="fa-solid fa-hand-scissors"></i></button>
-                <button class="btn" data-type="lizard"><i class="fa-solid fa-hand-lizard"></i></button>
+                <button class="btn" data-type="rock" role="button" aria-label="This button is the choice rock"><i class="fa-solid fa-hand-back-fist"></i></button>
+                <button class="btn" data-type="paper" role="button" aria-label="This button is the choice paper"><i class="fa-solid fa-hand"></i></button>
+                <button class="btn" data-type="scissors" role="button" aria-label="This button is the choice scissors"><i class="fa-solid fa-hand-scissors"></i></button>
+                <button class="btn" data-type="lizard" role="button" aria-label="This button is the choice lizard"><i class="fa-solid fa-hand-lizard"></i></button>
             </div>
             <div id="center-text">
                 <div id="text-container">
@@ -48,12 +51,12 @@
             </div>
             <div id="right-buttons">
                 <h3 class="userxcomputer">Computer</h3>
-                <button class="btn" data-type="computer" id="computer"><i class="fa-solid fa-question"></i></button>
+                <button class="btn" data-type="computer" id="computer" ><i class="fa-solid fa-question "role="button" aria-label="This button is the computers choice so its not interactable"></i></button>
             </div>
         </div>
         <div class="submitHolder">
-            <button type="submit" id="submit-button" data-type="submit" class="bottom-button">Submit</button>
-            <button type="submit" id="continue-button" data-type="continue" class="bottom-button">Continue</button>
+            <button type="submit" id="submit-button" data-type="submit" class="bottom-button" role="button" aria-label="This button is so you can submit your answer">Submit</button>
+            <button type="submit" id="continue-button" data-type="continue" class="bottom-button" role="button" aria-label="This button is to continue the game">Continue</button>
         </div>
         <div id="score-section">
             <h3>Score:</h3>
