--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
             <button type="submit" id="continue-button" data-type="continue" class="bottom-button" role="button" aria-label="This button is to continue the game">Continue</button>
         </div>
         <div id="score-section">
-            <h3>Score:</h3>
+            <h3>Score: </h3>
             <p>You: <span id="user-score">0</span></p>
             <p>Computer: <span id="computer-score">0</span></p>
+            <p>First to Three Wins!</p>
         </div>
     </section>
     <script src="assets/js/script.js"></script>
