added instruction section the index and added functuionalityy segfment to readme

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             <p>First to Three Wins!</p>
         </div>
     </section>
+    <section id="instructions">
+        <h3>How to play</h3>
+        <p>1. Click on the button with the symbol you wish to choose</p>
+        <p>2. Click the submit button when you are happy with your choice</p>
+        <p>3. Click the continue button to play again, remember first to three wins</p>
+    </section>
     <script src="assets/js/script.js"></script>
     <script src="https://kit.fontawesome.com/adbe32f668.js" crossorigin="anonymous"></script>
 
