--- a/level2.html
+++ b/level2.html
@@ -62,6 +62,7 @@
             <h3>Score:</h3>
             <p>You: <span id="user-score">0</span></p>
             <p>Computer: <span id="computer-score">0</span></p>
+            <p>First to Three Wins!</p>
         </div>
     </section>
     <script src="assets/js/script.js"></script>
