--- a/level3.html
+++ b/level3.html
@@ -35,7 +35,7 @@
         </ul>
     </section>
     <section id="game-container">
-        <h2 id="level-title">Level: 3</h2>z 
+        <h2 id="level-title">Level: 3</h2>
         <div id="game-elements">
             <div id=left-buttons>
                 <h3 class="userxcomputer">You</h3>
